--- a/src/main/resources/templates/web/index/index.html
+++ b/src/main/resources/templates/web/index/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head th:replace="fragment :: web_header">
-</head>
-
+<head th:replace="fragment :: web_header"> </head>
 <body>
 <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 <div th:replace="fragment :: web_header_page"></div>
-
 <main id="main">
   <!---Video-->
   <div class="col-lg-auto">
@@ -28,9 +24,11 @@
           <i class="bi bi-emoji-frown"></i> Love
         </button>
 
-        <button type="button" class="btn btn-outline-primary"><i class="bi bi-heart"></i> <span
-                class="badge badge-light">4</span></button>
-        <hr>
+        <button type="button" class="btn btn-outline-primary">
+          <i class="bi bi-heart"></i>
+          <span class="badge badge-light">4</span>
+        </button>
+        <hr />
         <p class="card-text">Created at: yyyy/mm/dd. By: TranQuyet</p>
       </div>
     </div>
@@ -164,87 +162,6 @@
   </section>
   <!-- End Portfolio Section -->
 
-  <!-- ======= About Section ======= -->
-  <section id="portfolio1" class="about">
-    <div class="container">
-      <div class="section-title">
-        <h2 >About</p></h2>
-        <p>
-          Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-          ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-          quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-          Quia fugiat sit in iste officiis commodi quidem hic quas.
-        </p>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-4" data-aos="fade-right">
-          <img th:src="@{img/profile-img.jpg}" class="img-fluid" alt="" />
-        </div>
-        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX Designer &amp; Web Developer.</h3>
-          <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <div class="row">
-            <div class="col-lg-6">
-              <ul>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>Birthday:</strong> <span>1 May 1995</span>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>Website:</strong> <span>www.example.com</span>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>Phone:</strong> <span>+123 456 7890</span>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>City:</strong> <span>New York, USA</span>
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul>
-                <li>
-                  <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                  <span>30</span>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>Degree:</strong> <span>Master</span>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>PhEmailone:</strong>
-                  <span>email@example.com</span>
-                </li>
-                <li>
-                  <i class="bi bi-chevron-right"></i>
-                  <strong>Freelance:</strong> <span>Available</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis
-            optio vero. Quisquam sunt adipisci omnis et ut. Nulla
-            accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et
-            consectetur qui quia repellendus itaque neque. Aliquid amet
-            quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis
-            culpa magni laudantium dolores.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End About Section -->
-
   <!-- ======= Resume Section ======= -->
   <section id="portfolio2" class="resume">
     <div class="container">
@@ -351,7 +268,6 @@
       </div>
     </div>
   </section>
-
   <section id="portfolio3" class="services">
     <div class="container">
       <div class="section-title">
@@ -363,15 +279,10 @@
           Quia fugiat sit in iste officiis commodi quidem hic quas.
         </p>
       </div>
-
-      <div class="row">
-
-      </div>
+      <div class="row"></div>
     </div>
   </section>
-
 </main>
-
 </body>
 
 </html>
