--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head th:fragment="web_header">
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -9,12 +8,10 @@
           type = "image/x-icon">
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-
     <!-- Google Fonts -->
     <link
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
             rel="stylesheet" />
-
     <!-- Vendor CSS Files -->
     <link th:href="@{/vendor/aos/aos.css}" rel="stylesheet" />
     <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
@@ -26,7 +23,6 @@
 <!--    <link th:href="@{/toastr/toastr.scss}" rel="stylesheet" />-->
     <link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css}" rel="stylesheet" />
     <!-- End #main -->
-
     <!---@{/vendor/aos/aos.js} -->
     <!-- Vendor JS Files -->
     <script th:src="@{/vendor/aos/aos.js}"></script>
@@ -41,7 +37,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Template Main JS File -->
     <script th:src="@{/js/main.js}"></script>
-    <script th:src="@{/tranquyet/js/test.js}"></script>
+    <script th:src="@{/tranquyet/web/js/index.js}"></script>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}"></script>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js}"></script>
+    <script th:src="@{/tranquyet/web/js/websocket.js}"></script>
 <!--    <script th:src="@{/toastr/toastr.js}"></script>-->
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js}"
             integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw=="
@@ -49,16 +48,17 @@
     <script>
         $(()=>{
             toastr.options = {
+                "allowHtml": true,
                 "closeButton": true,
                 "debug": false,
                 "newestOnTop": false,
-                "progressBar": true,
+                "progressBar": false,
                 "positionClass": "toast-bottom-right",
                 "preventDuplicates": false,
                 "onclick": null,
-                "showDuration": "300",
+                "showDuration": "3000",
                 "hideDuration": "1000",
-                "timeOut": "5000",
+                "timeOut": "3000",
                 "extendedTimeOut": "1000",
                 "showEasing": "swing",
                 "hideEasing": "linear",
@@ -68,6 +68,27 @@
         });
 
     </script>
+    <style>
+        /* width */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        /* Track */
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: #888;
+        }
+
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
+    </style>
 </head>
 
 <body>
@@ -92,7 +113,7 @@
                 <ul>
                     <hr />
                     <li>
-                        <a href="#portfolio" class="nav-link"><i class="bx bx-book-content color-icon"></i>
+                        <a href="#desciption" class="nav-link"><i class="bx bx-book-content color-icon"></i>
                             <span>Information</span></a>
                     </li>
                     <hr />
@@ -104,21 +125,15 @@
                     <div class="card-body">
                         <div class="parent">
                             <div class="card-body"
-                                 style="overflow:scroll; height: 370px; overflow-x: hidden; padding-left: 2px;padding-top: 5px;padding-bottom: 5px; padding-right: 2px">
-                                <div class="alert alert-primary" style="padding: 0.10rem 0.5rem; margin-bottom: 5px" role="alert">
-                                    <span class="badge badge-primary text-black"><p class="font-italic">New User: 2021/11/12 20:18:11</p></span>
-                                    <hr>
-                                    <p>This is a primary alert—check it out!</p>
-                                </div>
-
+                                 style="overflow:scroll; height: 370px; overflow-x: hidden; padding-left: 2px;padding-top: 5px;padding-bottom: 5px; padding-right: 2px" id="message-box">
 
                             </div>
                             <div class="input-group mb-3 absolute">
                                 <hr />
-                                <input style="height: 30px" type="text" class="form-control" placeholder="comment ..."
+                                <input style="height: 30px" type="text" class="form-control" id="message" placeholder="comment ..."
                                        aria-describedby="button-addon2" />
                                 <button style="height: 30px; width: 40px" class="btn btn-success" type="button"
-                                        id="button-comment">
+                                        id="send">
                                     <i class="bi bi-arrow-right-circle"></i>
                                 </button>
                             </div>
@@ -136,6 +151,13 @@
     </header>
 </div>
 
+<div th:fragment="web_footer_page">
+    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+        <div class="container text-center">
+            <small>@World Me Blog</small>
+        </div>
+    </footer>
+</div>
 </body>
 
 </html>
