--- a/src/main/resources/templates/admin/s1-video-admin.html
+++ b/src/main/resources/templates/admin/s1-video-admin.html
@@ -18,7 +18,7 @@
                             <div class="card-header">
                                 <h4 class="card-title">List Videos</h4>
                             </div>
-                            <div class="card-body table-full-width table-responsive">
+                            <div class="card-body table-full-width table-responsive" style="overflow-y: scroll; height:630px;">
                                 <table class="table table-hover table-striped">
                                     <thead>
                                     <th>ID</th>
@@ -28,25 +28,23 @@
                                     <th>Functions</th>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td>1</td>
+                                    <tr th:each="video : ${videos}">
+                                        <td th:text="${video.id}"></td>
                                         <td>Dakota Rice</td>
                                         <td>
-                                            <img width="300" height="200" src="https://wallpaperaccess.com/full/114245.jpg"
+                                            <img width="300" height="200" th:src="@{${video.linkImage}}"
                                                  class="img-rounded" alt="Cinque Terre" />
                                         </td>
                                         <td>
                                             <iframe width="300" height="200"
-                                                    src="https://www.youtube.com/embed/iNPMmSSehBk"
+                                                    th:src="@{${video.linkVideo}}"
                                                     title="YouTube video player" frameborder="0"
                                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                                     allowfullscreen></iframe>
                                         </td>
                                         <td>
-                                            <button type="button" class="btn btn-success">
-                                                Detail</button><button type="button" class="btn btn-danger">
-                                            Delete
-                                        </button>
+                                            <button type="button" class="btn btn-success" th:id="'detail_'+${video.id}">Detail</button>
+                                            <button type="button" class="btn btn-danger delete-video"  th:id="'delete_'+${video.id}">Delete</button>
                                         </td>
                                     </tr>
                                     </tbody>
@@ -54,59 +52,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--                    <div class="col-md-12">-->
-                    <!--                        &lt;!&ndash;                        <div class="card strpied-tabled-with-hover" style="background: #bacbe6">&ndash;&gt;-->
-                    <!--                        <div class="col-md-12">-->
-                    <!--                            <h3>Title: </h3>-->
-                    <!--                            <div class="input-group mb-3">-->
-                    <!--                                <input type="text" class="form-control" id="input-title" aria-label="Default" aria-describedby="inputGroup-sizing-default">-->
-                    <!--                            </div>-->
-                    <!--                        </div>-->
-                    <!--                        <div class="col-md-12">-->
-                    <!--                            <h3>Topic: </h3>-->
-                    <!--                            <select class="form-control" id="selection-topic" >-->
-                    <!--                                <div th:each="topic: ${topics}">-->
-                    <!--                                    <option th:value="${topic.name}" th:text="${topic.name}">All</option>-->
-                    <!--                                </div>-->
-                    <!--                            </select>-->
-                    <!--                        </div>-->
-                    <!--                        <div class="col-md-12">-->
-                    <!--                            <h3>Link Video: </h3>-->
-                    <!--                            <div class="input-group mb-3">-->
-                    <!--                                <input type="text" id="input-link-video" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">-->
-                    <!--                            </div>-->
-                    <!--                        </div>-->
-                    <!--                        <div class="col-md-12">-->
-                    <!--                            <h3>Link Image: </h3>-->
-                    <!--                            <div class="input-group mb-3">-->
-                    <!--                                <input type="text" id="input-link-image" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">-->
-                    <!--                            </div>-->
-                    <!--                        </div>-->
-                    <!--                        &lt;!&ndash;                        </div>&ndash;&gt;-->
-                    <!--                    </div>-->
-                    <!--                    &lt;!&ndash;description&ndash;&gt;-->
-                    <!--                    <div class="col-md-12">-->
-                    <!--                        <h3>Description: </h3>-->
-                    <!--                        <div id="editor-description">-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
-                    <!--                    &lt;!&ndash;ckediter&ndash;&gt;-->
-                    <!--                    <div class="col-md-12">-->
-                    <!--                        <h3>Content: </h3>-->
-                    <!--                        <div id="editor">-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
-                    <!--                    <hr/>-->
-                    <!--                    <div class="col-md-12" style="padding-top: 30px">-->
-                    <!--                        <div class="btn-group btn-group-toggle" data-toggle="buttons">-->
-                    <!--                            <label class="btn btn-success" id="button-save-video">-->
-                    <!--                                <input type="radio" name="options" id="option1" > Save-->
-                    <!--                            </label>-->
-                    <!--                            <label class="btn btn btn-danger" id="button-video-cancel">-->
-                    <!--                                <input type="radio" name="options" id="option3" > Cancel-->
-                    <!--                            </label>-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
+
                 </div>
             </div>
         </div>
