--- a/src/main/resources/templates/admin/s2-add-video-admin.html
+++ b/src/main/resources/templates/admin/s2-add-video-admin.html
@@ -12,41 +12,11 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="card strpied-tabled-with-hover">
-                            <div class="card-header">
-                                <h4 class="card-title">Striped Table with Hover</h4>
-                                <p class="card-category">
-                                    Here is a subtitle for this table
-                                </p>
-                            </div>
-                            <div class="card-body table-full-width table-responsive">
-                                <table class="table table-hover table-striped">
-                                    <thead>
-                                    <th>ID</th>
-                                    <th>Name</th>
-                                    <th>Salary</th>
-                                    <th>Country</th>
-                                    <th>City</th>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Dakota Rice</td>
-                                        <td>$36,738</td>
-                                        <td>Niger</td>
-                                        <td>Oud-Turnhout</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
 <!--                        <div class="card strpied-tabled-with-hover" style="background: #bacbe6">-->
                             <div class="col-md-12">
                                 <h3>Title: </h3>
                                 <div class="input-group mb-3">
-                                    <input type="text" class="form-control" id="input-title" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+                                    <input type="text" required class="form-control" id="input-title" aria-label="Default" aria-describedby="inputGroup-sizing-default">
                                 </div>
                             </div>
                             <div class="col-md-12">
@@ -60,13 +30,13 @@
                             <div class="col-md-12">
                                 <h3>Link Video: </h3>
                                 <div class="input-group mb-3">
-                                    <input type="text" id="input-link-video" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+                                    <input required type="text" id="input-link-video" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <h3>Link Image: </h3>
                                 <div class="input-group mb-3">
-                                    <input type="text" id="input-link-image" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+                                    <input required type="text" id="input-link-image" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
                                 </div>
                             </div>
 <!--                        </div>-->
