fix status security

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
         <p class="text-warning">You have been logged out.</p>
       </div>
       <div>
-        <p><input type="email" name="email" required class="form-control" placeholder="E-mail" /></p>
+        <p><input type="text" name="email" required class="form-control" placeholder="E-mail" /></p>
       </div>
       <div>
         <p><input type="password" name="pass" required class="form-control" placeholder="Password" /></p>
