--- a/src/main/resources/static/tranquyet/admin/css/movie.css
+++ b/src/main/resources/static/tranquyet/admin/css/movie.css
@@ -2,3 +2,24 @@
   min-height: 400px;
   /*resize: none;*/
 }
+.ck-content .image-style-side {
+  max-width: 50%;
+  float: right;
+  margin-left: var(--ck-image-style-spacing);
+}
+.ck-content .image.image_resized {
+  max-width: 100%;
+}
+
+.ck-content .image.image_resized {
+  display: block;
+  box-sizing: border-box;
+}
+
+.ck-content .image.image_resized img {
+  width: 100%;
+}
+
+.ck-content .image.image_resized > figcaption {
+  display: block;
+}
